 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3115] fixed returned data type for net.tcp.listen under Solaris and FreeBSD (Sasha)
 - [ZBX-3115] fixed returned data type for system.users.num metric (Sasha)
 - [ZBX-3259] fixed log trigger wizard functionality: now it can be used for any item with value type = log, text or char (KB)
 - [ZBX-2672] added internal checks zabbix[*] to help items in data.sql (Sasha)
 - [ZBX-3255] fixed string escaping under IBM DB2 (asaveljevs,Sasha)
 - [ZBX-3201] fixed evaluation of calculated items with multiline expressions (asaveljevs)
 - [ZBX-3210] fixed incorrect height scaling in graphs (KB,asaveljevs)
 - [ZBX-3231] improved item key validation in the GUI and notification macro parser on the server (KB,asaveljevs)
 - [ZBX-3061] fixed screen import problem with "Status of triggers" screen type (Aly)
 - [ZBX-3249] added define for frontend graphing on partitioned DB data store (Aly)
 - [ZBX-3216] fixed setup not catching existing configuration file on step 6 (Vedmak)
 - [ZBX-3240] updated Russian translation; thanks to dotneft and zalex_ua (Richlv)
 - [ZBX-3229] improved output of configure script (Richlv,asaveljevs)
 - [ZBX-3222] fixed Zabbix returns to incorrect page from acknowledge form (Vedmak)
 - [ZBX-2577] fixed template trigger update affects downstream triggers (Vedmak)
 - [ZBX-3221] fixed host deletion through API (Aly)
 - [ZBX-3220] fixed error when delete host on postgresql db (Vedmak)
 - [ZBX-2293] fixed server terminating when sending "database down" alerts using scripts (asaveljevs,Sasha)