@@ -187,7 +187,6 @@ typedef struct zbx_metric_type
 #define ZBX_DSTAT_W_OPER	4
 #define ZBX_DSTAT_W_BYTE	5
 #define ZBX_DSTAT_MAX		6
-void	refresh_diskdevices();
 int	get_diskstat(const char *devname, zbx_uint64_t *dstat);
 
 /* flags for command */
