@@ -24,7 +24,6 @@
 
 #if defined(KERNEL_2_4)
 #	define INFO_FILE_NAME	"/proc/partitions"
-#	define DEVNAME(line)	if(sscanf(line, "%*d %*d %*d %s ", name) != 1) continue
 #	define PARSE(line)	if(sscanf(line, "%*d %*d %*d %s " \
 					ZBX_FS_UI64 " %*d " ZBX_FS_UI64 " %*d " \
 					ZBX_FS_UI64 " %*d " ZBX_FS_UI64 " %*d %*d %*d %*d", \
@@ -36,7 +35,6 @@
 				) != 5) continue
 #else
 #	define INFO_FILE_NAME	"/proc/diskstats"
-#	define DEVNAME(line)	if(sscanf(line, "%*d %*d %s ", name) != 1) continue
 #	define PARSE(line)	if(sscanf(line, "%*d %*d %s " \
 					ZBX_FS_UI64 " %*d " ZBX_FS_UI64 " %*d " \
 					ZBX_FS_UI64 " %*d " ZBX_FS_UI64 " %*d %*d %*d %*d", \
@@ -47,33 +45,6 @@
 				&ds[ZBX_DSTAT_W_SECT]	\
 				) != 5) continue
 #endif
-
-void	refresh_diskdevices()
-{
-	FILE	*f;
-	char	tmp[MAX_STRING_LEN], name[MAX_STRING_LEN];
-	size_t	sz;
-
-	/* "all" devices */
-	if (NULL == collector_diskdevice_get(""))
-		collector_diskdevice_add("");
-
-	if (NULL == (f = fopen(INFO_FILE_NAME, "r")))
-		return;
-
-	while (NULL != fgets(tmp, sizeof(tmp), f))
-	{
-		DEVNAME(tmp);
-
-		sz = strlen(name);
-		if (isdigit(name[sz - 1]))	/* skip partitions */
-			continue;
-
-		if (NULL == collector_diskdevice_get(name))
-			collector_diskdevice_add(name);
-	}
-	zbx_fclose(f);
-}
 
 int	get_diskstat(const char *devname, zbx_uint64_t *dstat)
 {
@@ -111,8 +82,9 @@ int	get_diskstat(const char *devname, zbx_uint64_t *dstat)
 int	VFS_DEV_WRITE(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
 	ZBX_SINGLE_DISKDEVICE_DATA *device;
-	char	devname[32], tmp[16];
-	int	type, mode, nparam;
+	char		devname[32], tmp[16];
+	int		type, mode, nparam;
+	zbx_uint64_t	dstats[ZBX_DSTAT_MAX];
 
 	assert(result);
 
@@ -144,8 +116,6 @@ int	VFS_DEV_WRITE(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 
 	if (type == ZBX_DSTAT_TYPE_SECT || type == ZBX_DSTAT_TYPE_OPER)
 	{
-		zbx_uint64_t	dstats[ZBX_DSTAT_MAX];
-
 		if (nparam > 2)
 			return SYSINFO_RET_FAIL;
 
@@ -179,7 +149,13 @@ int	VFS_DEV_WRITE(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 		return SYSINFO_RET_FAIL;
 
 	if (NULL == (device = collector_diskdevice_get(devname)))
-		return SYSINFO_RET_FAIL;
+	{
+		if (FAIL == get_diskstat(devname, dstats))	/* validate device name */
+			return SYSINFO_RET_FAIL;
+
+		if (NULL == (device = collector_diskdevice_add(devname)))
+			return SYSINFO_RET_FAIL;
+	}
 
 	if (type == ZBX_DSTAT_TYPE_SPS)	/* default parameter */
 		SET_DBL_RESULT(result, device->w_sps[mode])
@@ -192,8 +168,9 @@ int	VFS_DEV_WRITE(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 int	VFS_DEV_READ(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
 	ZBX_SINGLE_DISKDEVICE_DATA *device;
-	char	devname[32], tmp[16];
-	int	type, mode, nparam;
+	char		devname[32], tmp[16];
+	int		type, mode, nparam;
+	zbx_uint64_t	dstats[ZBX_DSTAT_MAX];
 
 	assert(result);
 
@@ -225,8 +202,6 @@ int	VFS_DEV_READ(const char *cmd, const char *param, unsigned flags, AGENT_RESUL
 
 	if (type == ZBX_DSTAT_TYPE_SECT || type == ZBX_DSTAT_TYPE_OPER)
 	{
-		zbx_uint64_t	dstats[ZBX_DSTAT_MAX];
-
 		if (nparam > 2)
 			return SYSINFO_RET_FAIL;
 
@@ -260,7 +235,13 @@ int	VFS_DEV_READ(const char *cmd, const char *param, unsigned flags, AGENT_RESUL
 		return SYSINFO_RET_FAIL;
 
 	if (NULL == (device = collector_diskdevice_get(devname)))
-		return SYSINFO_RET_FAIL;
+	{
+		if (FAIL == get_diskstat(devname, dstats))	/* validate device name */
+			return SYSINFO_RET_FAIL;
+
+		if (NULL == (device = collector_diskdevice_add(devname)))
+			return SYSINFO_RET_FAIL;
+	}
 
 	if (type == ZBX_DSTAT_TYPE_SPS)	/* default parameter */
 		SET_DBL_RESULT(result, device->r_sps[mode])
