@@ -25,6 +25,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3269] fixed processing of vfs.dev.read/write metrics for devices with trailing digits (Sasha)
  - [ZBX-3115] fixed returned data type for net.tcp.listen under Solaris and FreeBSD (Sasha)
  - [ZBX-3115] fixed returned data type for system.users.num metric (Sasha)
  - [ZBX-3259] fixed log trigger wizard functionality: now it can be used for any item with value type = log, text or char (KB)
